--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .eisenhower-matrix { text-align: center;
 }
 }
-.centered-main-page-element {
+.centered-element {
     display: block;
     width: 500px;
     margin: 0 auto 0;
@@ -31,7 +31,7 @@ body {
     display: inline-block;
     flex-grow: 1
 }
-.task-row-wrapper {
+.task-wrapper {
     display: flex;
 }
 ul {
@@ -128,7 +128,7 @@ button.delete img:hover {
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul#completed label {
     text-decoration: line-through
     color: #888;
 }
