--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     display: block;
     text-align: right;
 }
-.eisenhower-matrix img {
+.eisenhower-matrix .eisenhower-matrix-img {
     width: 100%;
 }
 .eisenhower-matrix .more-inf {
@@ -44,7 +44,7 @@ li, h3 {
 input,button{
     outline:none;
 }
-button {
+.btn {
     background: none;
     border: 0px;
     color: #888;
@@ -53,12 +53,12 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
-button:hover {
+.btn:hover {
     color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for='new-task'] {
+.title,
+.new-task-title {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -67,7 +67,7 @@ label[for='new-task'] {
     margin: 0;
     text-transform: uppercase;
 }
-input[type="text"] {
+.task-input {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -79,21 +79,25 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
-input[type="text"]:focus {
+.task-input:focus {
     color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+.new-task-label {
     display: block;
     margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
     width: 318px;
 }
 
+.task-item > * {
+    vertical-align: middle;
+}
+
 /* Task list */
-li {
+.task-item {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -102,47 +106,44 @@ li {
     justify-content: space-between;
     align-items: center;
 }
-li > * {
-    vertical-align: middle;
-}
 
-li > input[type="checkbox"] {
+.task-item > .check-complete {
     margin: 0 10px;
 }
-li > label {
+.task-item > .task {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
-    width: 226px
+.task-item > .task-input {
+    width: 226px;
 }
-button.delete img {
+.btn.delete .remove-img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.btn.delete .remove-img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed label {
+#completed .task {
     text-decoration: line-through
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task-list .task-item .task-input {
     display:none
 }
 
-ul li.edit-mode input[type=text] {
+.task-list .task-item.edit-mode .task-input {
     display:inline-block;
-    width:224px
+    width:224px;
 }
 
-ul li.edit-mode label {
+.task-list .task-item.edit-mode .task-label {
     display:none;
 }
