--- a/style.css
+++ b/style.css
@@ -4,46 +4,57 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
 }
+
 .eisenhower-matrix {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
+
 .eisenhower-matrix .eisenhower-matrix-img {
     width: 100%;
 }
+
 .eisenhower-matrix .more-inf {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.eisenhower-matrix { text-align: center;
-}
+
+  .eisenhower-matrix { 
+      text-align: center;
+  }
 }
 .centered-element {
     display: block;
     width: 500px;
     margin: 0 auto 0;
 }
+
 .task {
     width: 56%;
     display: inline-block;
     flex-grow: 1
 }
+
 .task-wrapper {
     display: flex;
 }
+
 ul {
     margin:0;
     padding: 0px;
 }
+
 li, h3 {
     list-style:none;
 }
+
 input,button{
     outline:none;
 }
+
 .btn {
     background: none;
     border: 0px;
@@ -53,10 +64,13 @@ input,button{
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
+
 .btn:hover {
     color: #3a3A3a;
 }
+
 /* Heading */
+
 .title,
 .new-task-title {
     color: #333;
@@ -67,6 +81,7 @@ input,button{
     margin: 0;
     text-transform: uppercase;
 }
+
 .task-input {
     margin: 0;
     font-size: 18px;
@@ -79,15 +94,18 @@ input,button{
     font-family: Lato, sans-serif;
     color: #888;
 }
+
 .task-input:focus {
     color: #333;
 }
 
 /* New Task */
+
 .new-task-label {
     display: block;
     margin: 0 0 20px;
 }
+
 #new-task {
     width: 318px;
 }
@@ -97,6 +115,7 @@ input,button{
 }
 
 /* Task list */
+
 .task-item {
     overflow: hidden;
     padding: 20px 0;
@@ -110,25 +129,30 @@ input,button{
 .task-item > .check-complete {
     margin: 0 10px;
 }
+
 .task-item > .task {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
+
 .task-item > .task-input {
     width: 226px;
 }
+
 .btn.delete .remove-img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
+
 .btn.delete .remove-img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
+
 #completed .task {
     text-decoration: line-through
     color: #888;
