--- a/style.css
+++ b/style.css
@@ -12,11 +12,13 @@ body {
     text-align: right;
 }
 
-.eisenhower-matrix .eisenhower-matrix-img {
+.eisenhower-matrix 
+.eisenhower-matrix-img {
     width: 100%;
 }
 
-.eisenhower-matrix .more-inf {
+.eisenhower-matrix 
+.more-inf {
     font-family: fantasy, cursive;
 }
 
@@ -47,11 +49,13 @@ ul {
     padding: 0px;
 }
 
-li, h3 {
+li, 
+h3 {
     list-style: none;
 }
 
-input,button{
+input,
+button{
     outline: none;
 }
 
@@ -140,33 +144,42 @@ input,button{
     width: 226px;
 }
 
-.btn.delete .remove-img {
+.btn.delete 
+.remove-img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
 
-.btn.delete .remove-img:hover {
+.btn.delete 
+.remove-img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
 
-#completed .task {
+#completed 
+.task {
     text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
-.task-list .task-item .task-input {
+.task-list 
+.task-item 
+.task-input {
     display: none;
 }
 
-.task-list .task-item.edit-mode .task-input {
+.task-list 
+.task-item.edit-mode 
+.task-input {
     display: inline-block;
     width: 224px;
 }
 
-.task-list .task-item.edit-mode .task-label {
+.task-list 
+.task-item.edit-mode 
+.task-label {
     display: none;
 }
